# preloved-corner

./: .gitignore  Dockerfile.dev  README.md  commitlint.config.js  docker-compose.yml  package.json  pnpm-lock.yaml
apps/backend/: Makefile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: a8c1b11fc987_initial_migration.py
apps/backend/app/: main.py
apps/backend/app/api/routes/: health.py
apps/backend/app/core/: config.py
apps/backend/app/db/: database.py  models.py
apps/backend/tests/: test_health.py
apps/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend/src/: App.test.tsx  App.tsx
